--- a/style/moodle.css
+++ b/style/moodle.css
@@ -21803,7 +21803,6 @@ button.bg-gray:focus {
     height: 100% !important;
     width: 100% !important;
     object-fit: contain !important;
-    display: flex !important; 
     /*position: absolute !important;*/
     left: 50% !important;
     top: 50% !important;
